Создание базы данных с помощью EntityFramework Core и Code First

--- a/FootballMatchPredictor/Views/Shared/Error.cshtml
+++ b/FootballMatchPredictor/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using FootballMatchPredictor.Domain.ViewModels.Error
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
