Доделал дизайн главной страницы

--- a/FootballMatchPredictor/Views/Home/Index.cshtml
+++ b/FootballMatchPredictor/Views/Home/Index.cshtml
@@ -1,8 +1,109 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная страница";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div style="min-height:2000px;">
+    <div class="row bg-dark p-4" style="height:900px;">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-4 col-sm-12 lh-base">
+            <h1 class="text-white" style="margin-top:175px; font-size:50px;">
+                Лучшие ставки<br /> на футбольные матчи
+            </h1>
+            <p class="fs-5 text-white my-5">
+                Добро пожаловать на наш сайт для ставок на футбол! Мы предлагаем широкий выбор событий и высокие коэффициенты для вашей игры.
+            </p>
+            <p class="fs-5 text-white my-5">
+                Наша команда экспертов по футболу следит за всеми актуальными новостями и анализирует каждый матч, чтобы помочь вам сделать правильные ставки.
+                Присоединяйтесь к нам сегодня и испытайте удачу вместе с нами!
+            </p>
+        </div>
+        <div class="col-md-4 col-sm-12 br-40">
+            <img src="/images/football-main-page-pic.png" class="img-fluid" style="height:600px; margin-top:100px;"/>
+        </div>
+        <div class="col-md-2">
+        </div>
+    </div>
+    <div class="row pt-5">
+        <div class="col-md-2">
+
+        </div>
+        <div class="col-md-4 py-5">
+            <h1 class="fw-bolder  mb-5" style="font-size:45px;">
+                Лучшие коэффициенты!
+            </h1>
+            <p class="fs-5 lh-base my-4">
+                Добро пожаловать на наш сайт для ставок на футбол! Мы предлагаем широкий выбор событий и высокие коэффициенты для вашей игры.
+            </p>
+            <p class="fs-5 lh-base">
+                Наша команда экспертов по футболу следит за всеми актуальными новостями и анализирует каждый матч, 
+                чтобы помочь вам сделать правильные ставки. Присоединяйтесь к нам сегодня и испытайте удачу вместе с нами!
+            </p>
+            <button class="btn bg-indigo br-40 text-white fs-5 mt-4 mb-5" style="min-width:300px;">
+                Сделать ставку!
+            </button>
+        </div>
+        <div class="col-md-4 pt-5">
+            <ul class="fs-5 list-marked" style=" line-height:95px; margin-top:95px;">
+                <li class="lh-sm">
+                    Лучшие коэффициенты на рынке. Cледите за самыми точными прогнозами и окунитесь в захватывающий мир футбольных предсказаний.
+                </li>
+                <li>
+                    Профессиональные прогнозы от экспертов
+                </li>
+                <li>
+                    Быстрые выплаты и удобные способы пополнения счета
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-2">
+        </div>
+    </div>
+    <div class="row bg-dark p-4" style="min-height:700px;">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 pt-5" style="height:200px;">
+            <p class="fs-1 text-white mt-5">
+                Что мы вам предоставляем!
+            </p>
+            <p class="fs-4 text-white" align="justify">
+                Добро пожаловать на наш сайт, где вы можете насладиться азартом и страстью к футбольным матчам,
+                делая ставки на лучшие команды и игроков. Мы предлагаем широкий выбор событий и высокие коэффициенты для вашей игры.
+            </p>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2">
+            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+                <i class="fa fa-star text-white fa-4x m-auto d-block text-center mt-4"></i>
+                <p class="m-3 fs-6" align="justify">
+                    Коэффициенты – это ключевой показатель при выборе ставки на футбольный матч
+                </p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+                <i class="fa fa-money text-white fa-4x m-auto d-block text-center mt-4"></i>
+                <p class="m-3 fs-6" align="justify">
+                    Ставки на фатбольные матчи – это захватывающий способ испытать свою удачу и знания
+                </p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+                <i class="fa fa-futbol-o text-white fa-4x m-auto d-block text-center mt-4"></i>
+                <p class="m-3 fs-6" align="justify">
+                    Матчи – основной элемент футбольного мира, полный эмоций.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+                <i class="fa fa-percent text-white fa-4x m-auto d-block text-center mt-4"></i>
+                <p class="m-3 fs-6" align="justify">
+                    Статистика – незаменимый инструмент для анализа прошлых результатов команд
+                </p>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
 </div>
