--- a/FootballMatchPredictor/Views/Shared/Error.cshtml
+++ b/FootballMatchPredictor/Views/Shared/Error.cshtml
@@ -4,23 +4,24 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <img src="~/images/" class="img-fluid" style="height:300px;"/>
+        </div>
+    </div>
+</div>
 
-@if (Model.ShowRequestId)
+<h1 class="text-danger">Возникла ошибка.</h1>
+<h2 class="text-danger">Во время обработки Вашего запроса произошла ошибка.</h2>
+
+@if (Model.StatusCode != null)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>Код:</strong> <code>@Model.StatusCode</code>
     </p>
 }
 
-<h3>Development Mode</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    @Model.ErrorMessage
 </p>
