--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FootballMatchPredictor.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/font-awesome.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/font-awesome.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" asp-append-version="true" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
             <div class="container">
-                <a asp-controller="Home" asp-action="Index"><i class="fa fa-futbol-o fa-4x" aria-hidden="true"></i></a>
+                <a class="link-light me-3" asp-controller="Home" asp-action="Index"><i class="far fa-futbol-o fa-2x text-black" aria-hidden="true"></i></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FootballMatchPredictor</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -21,25 +26,66 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Index">Игры</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Матчи</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Коэффициенты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Ставки</a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item dropdown">
+                                        <button class="btn text-black dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Страницы
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-light">
+                                            <li><a class="dropdown-item  text-black" href="#">Платёж</a></li>
+                                            <li><a class="dropdown-item  text-black" href="#">FAQ</a></li>
+                                            <li><a class="dropdown-item  text-black" href="#">О нас</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
+                    <button type="button" class="btn bg-indigo br-40 rounded-pill me-2 text-white btn-layout">Логин</button>
+                    <button type="button" class="btn btn-dark br-40 rounded-pill  btn-layout">Регистрация</button>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <div class="modal fade br-40" id="modalWindow" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content border">
+                <div class="modal-header d-flex">
+                    <div class="mx-auto"><p class="modal-title fs-3"></p></div>
+                    <div class="float-end">
+                        <button type="button" class="btn-close"
+                                data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - FootballMatchPredictor - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer bg-dark text-muted">
+        <div class="container text-white">
+            &copy; 2024 - FootballMatchPredictor - <a asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
