Сделал функционал профиля пользователя

--- a/FootballMatchPredictor/Views/Auth/Register.cshtml
+++ b/FootballMatchPredictor/Views/Auth/Register.cshtml
@@ -6,13 +6,23 @@
         <div class="col-md-12">
             <form asp-controller="Auth" asp-action="Register">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Имя пользователя</label>
+                    <label for="exampleInputEmail1" class="form-label">Логин пользователя</label>
                     <input type="text" class="form-control" asp-for="Username" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Почта</label>
                     <input type="email" asp-for="Email" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Имя пользователя</label>
+                    <input type="text" class="form-control" asp-for="Username" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Фамилия пользователя</label>
+                    <input type="text" class="form-control" asp-for="Username" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Пароль</label>
