--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
             <div class="container">
-                <a class="link-light me-3" asp-controller="Home" asp-action="Index"><i class="far fa-futbol-o fa-2x text-black" aria-hidden="true"></i></a>
+                <a class="link-light me-3" asp-controller="Home" asp-action="Index"><i class="far fa-futbol-o fa-3x text-black" aria-hidden="true"></i></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FootballMatchPredictor</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -30,9 +30,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Матчи</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Коэффициенты</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Ставки</a>
@@ -59,9 +56,12 @@
                         <div class="dropdown">
                             <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-user-circle fa-3x text-dark mx-2" aria-hidden="true"></i></a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Аккаунт</a></li>
-                            <li><a class="dropdown-item" href="#">Мои ставки</a></li>
-                            <li><a class="dropdown-item" href="#">Выйти</a></li>
+                            <li><a class="dropdown-item" asp-controller="UserProfile" asp-action="GetUserProfile">Аккаунт</a></li>
+                            <li>
+                                <form method="post" asp-controller="Auth" asp-action="Logout">
+                                    <button class="dropdown-item">Выйти</button>
+                                </form>
+                            </li>
                             </ul>
                         </div>
                     }
@@ -109,9 +109,10 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/popupWindow.js" asp-append-version="true"></script>
     <script src="~/js/modal.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
