Реализовал страницу с матчами

--- a/FootballMatchPredictor/Views/Shared/Error.cshtml
+++ b/FootballMatchPredictor/Views/Shared/Error.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FootballMatchPredictor.Domain.ViewModels.Error
 @model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Ошибка";
 }
 
 <div class="container">
