--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Index">Игры</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Матчи</a>
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Match" asp-action="GetMatches">Матчи</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Ставки</a>
