Сделал функционал ставки на коэффициент, убрал лишние сущности

--- a/FootballMatchPredictor/Views/Match/GetMatches.cshtml
+++ b/FootballMatchPredictor/Views/Match/GetMatches.cshtml
@@ -10,17 +10,17 @@
         <div class="col-md-12 pt-4">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="btn bg-indigo text-white active me-3 br-40" id="pills-live-tab" data-bs-toggle="pill" data-bs-target="#pills-live" type="button" role="tab" aria-controls="pills-live" aria-selected="true">Live-Матчи</button>
+                    <button class="btn bg-indigo text-white me-3 br-40" id="pills-live-tab" data-bs-toggle="pill" data-bs-target="#pills-live" type="button" role="tab" aria-controls="pills-live" aria-selected="false">Live-Матчи</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="btn bg-indigo text-white me-3 br-40" id="pills-not-played-tab" data-bs-toggle="pill" data-bs-target="#pills-not-played" type="button" role="tab" aria-controls="pills-not-played" aria-selected="false">Будущие матчи</button>
+                    <button class="btn bg-indigo text-white active me-3 br-40" id="pills-not-played-tab" data-bs-toggle="pill" data-bs-target="#pills-not-played" type="button" role="tab" aria-controls="pills-not-played" aria-selected="true">Будущие матчи</button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="btn bg-indigo text-white me-3 br-40" id="pills-played-tab" data-bs-toggle="pill" data-bs-target="#pills-played" type="button" role="tab" aria-controls="pills-played" aria-selected="false">Сыигранные матчи</button>
                 </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-live" role="tabpanel" aria-labelledby="pills-live-tab">
+                <div class="tab-pane show fade" id="pills-live" role="tabpanel" aria-labelledby="pills-live-tab">
                     @foreach (var match in Model.liveMathes)
                     {
                         <div class="row d-flex justify-content-start bg-dark text-white br-40 w-100 px-5 my-4 pt-2" style="min-height:130px;">
@@ -44,6 +44,10 @@
                                     <p>
                                         @coefficient.CoefficientReferDescription - @coefficient.CoefficientValue
                                     </p>
+                                    <button class="btn bg-indigo text-white br-40 mb-4" type="button" disabled onclick="openModal({ url: '/Bet/MakeBet/@coefficient.Id', modalId: 'modalWindow', modalTitle:'Сделать ставку'})"
+                                            data-toggle="ajax-modal" data-target="Modal">
+                                        Поставить на коэффициент
+                                    </button>
                                 }
                             </div>
                             <div class="col-md-2">
@@ -71,7 +75,7 @@
                         </div>
                     }
                 </div>
-                <div class="tab-pane fade" id="pills-not-played" role="tabpanel" aria-labelledby="pills-not-played-tab">
+                <div class="tab-pane fade show active" id="pills-not-played" role="tabpanel" aria-labelledby="pills-not-played-tab">
                     @foreach (var match in Model.notPlayedMathes)
                     {
                         <div class="row d-flex justify-content-start bg-dark text-white br-40 w-100 px-5 my-4 pt-2" style="min-height:130px;">
@@ -95,11 +99,11 @@
                                     <p>
                                         @coefficient.CoefficientReferDescription - @coefficient.CoefficientValue
                                     </p>
+                                    <button class="btn bg-indigo text-white br-40 mb-4" type="button" onclick="openModal({ url: '/Bet/MakeBet/@coefficient.Id', modalId: 'modalWindow', modalTitle:'Сделать ставку'})"
+                                            data-toggle="ajax-modal" data-target="Modal">
+                                        Поставить на коэффициент
+                                    </button>
                                 }
-                                <button class="btn bg-indigo text-white br-40 my-4" type="button" onclick="openModal({ url: '/Bet/MakeBet', modalId: 'modalWindow', modalTitle:'Сделать ставку' })"
-                                        data-toggle="ajax-modal" data-target="Modal">
-                                    Сделать ставку
-                                </button>
                             </div>
                             <div class="col-md-2">
                             </div>
