--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -113,6 +113,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/popupWindow.js" asp-append-version="true"></script>
+    <script src="~/js/confirmationWindow.js" asp-append-version="true"></script>
     <script src="~/js/modal.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
