--- a/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
+++ b/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
@@ -1,5 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FootballMatchPredictor.Domain.ViewModels.Bet
+@model MakeBetViewModel
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <form id="makeBetForm">
+                <input type="hidden" asp-for="CoefficientId"/>
+                <div class="form-group">
+                    <label asp-for="MoneyAmount" class="form-label">Сумма ставки</label>
+                    <input type="number" asp-for="MoneyAmount" class="form-control">
+                    <div class="form-text">
+                        Ставка должна быть больше 1000 рублей
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MoneyAmount" class="form-label">Сумма ставки</label>
+                    <select asp-for="SelectedPaymentMethodId" class="form-control">
+                    @foreach (var paymentMethod in Model.PaymentMethods)
+                    {
+                        <option value="@paymentMethod.Key">@paymentMethod.Value</option>
+                    }
+                    </select>
+                    <div class="form-text">
+                        Вы должны выбрать способ платежа
+                    </div>
+                </div>
+                <div class="text-center mt-3">
+                    <button type="button" class="btn bg-indigo br-40 text-white"
+                            onclick="doActionWithConfirmation(event, { url: '/Bet/MakeBet', formId: 'makeBetForm', confirmationTitle: 'сделать ставку?' })">
+                        Сделать ставку
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
