--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -26,13 +26,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Index">Игры</a>
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Team" asp-action="Index">Игры</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-black" asp-area="" asp-controller="Match" asp-action="GetMatches">Матчи</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Ставки</a>
                         </li>
                         <li class="nav-item">
                             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
