--- a/FootballMatchPredictor/Views/Shared/_Layout.cshtml
+++ b/FootballMatchPredictor/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link  text-black" asp-area="" asp-controller="Team" asp-action="Index">Игры</a>
+                            <a class="nav-link  text-black" asp-area="" asp-controller="Team" asp-action="GetAllTeams">Команды</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-black" asp-area="" asp-controller="Match" asp-action="GetMatches">Матчи</a>
@@ -39,9 +39,8 @@
                                             Страницы
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-light">
-                                            <li><a class="dropdown-item  text-black" href="#">Платёж</a></li>
-                                            <li><a class="dropdown-item  text-black" href="#">FAQ</a></li>
-                                            <li><a class="dropdown-item  text-black" href="#">О нас</a></li>
+                                            <li><a class="dropdown-item text-black" href="https://romi.center/ru/learning/article/frequently-asked-questions-page-as-the-perfect-way-to-power-up-your-business/?ysclid=ltpl5l5azv819119102">FAQ</a></li>
+                                            <li><a class="dropdown-item text-black" href="https://templatekit.tokomoo.com/tourkit/about-team/">О нас</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -80,6 +79,22 @@
 
     <div class="modal fade" id="modalWindow" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content br-40">
+                <div class="modal-header d-flex">
+                    <div class="mx-auto"><p class="modal-title fs-4 text-black ms-3"></p></div>
+                    <div class="float-end">
+                        <button type="button" class="btn-close me-2 mt-2"
+                                data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modalWideWindow" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" style="max-width: 800px;">
             <div class="modal-content br-40">
                 <div class="modal-header d-flex">
                     <div class="mx-auto"><p class="modal-title fs-4 text-black ms-3"></p></div>
